--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,17 +24,6 @@ Email:  support@getkirby.com
 
 }
 @font-face {
-	font-family: 'pressuru';
-	src: url(../fonts/pressuru-webfont.eot);
-	src: url(../fonts/pressuru-webfont.eot?#iefix) format('embedded-opentype'),
-		 url(../fonts/pressuru-webfont.woff2) format('woff2'),
-		 url(../fonts/pressuru-webfont.woff) format('woff'),
-		 url(../fonts/pressuru-webfont.ttf) format('truetype'),
-		 url(../fonts/pressuru-webfont.svg#pressururegular) format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
 	font-family: 'Autopia';
 	src: url('../fonts/AutopiaBoldItalic.eot');
 	src: url('../fonts/AutopiaBoldItalic.eot?#iefix') format('embedded-opentype'),
@@ -144,8 +133,8 @@ a:hover {
 /* Site
 -------------------------------------------------- */
 body, html {
-	font-size: 18px;
-	line-height: 24px;
+	font-size: 15px;
+	line-height: 1.25em;
 }
 html {
 	height: 100%;
@@ -166,11 +155,13 @@ main{
 	position: relative;
 	min-width: 300px;
 	max-width: 900px;
+	/* box-shadow: 0px 0px 20px rgba(0,0,0,.5); */
 }
 /* Main
 -------------------------------------------------- */
 p {
-	font-size: 1rem;
+	font-size: 1.25rem;
+	line-height: 1.25em;
 }
 li {
 	list-style: none;
@@ -180,6 +171,65 @@ hr {
 	height: 1px;
 	background: #000 none repeat scroll 0% 0%;
 	border: none;
+}
+#post-meta, .label-mini, .small, small, button, input, select, textarea {
+	font-size: 1rem;
+	line-height: 1.25em;
+}
+/* Headings
+-------------------------------------------------- */
+h1 {
+	font-size: 5rem;
+	line-height: 1.25em;
+	font-weight: 300;
+	margin: .5em 0;
+	font-family: "Autopia";
+}
+h1.title{
+	text-transform: uppercase;
+	text-align: center;
+	color: #F00;
+}
+h2 {
+	/*font-family: "Autopia";*/
+	font-size: 3rem;
+	line-height: 1.25em;
+	font-weight: 300;
+	margin: 0;
+}
+h3 {
+	font-size: 1.5rem;
+	line-height: 1.25em;
+	font-weight: 300;
+	margin: .5em 0;
+}
+h4 {
+	font-weight: 300;
+	line-height: 1.25em;
+	margin: .5em 0;
+}
+h1 a, h2 a, h3 a, h4 a {
+	color: inherit;
+	border: 0 !important;
+}
+
+/* Texts */
+blockquote {
+    padding: 0;
+    margin: 20px 0px 20px 0px;
+    color: #6E86A1;
+    border-left: 1px solid #fff;
+    padding-left: 30px;
+}
+.about{
+	padding: 0 100px;
+}
+.about p{
+	font-family: "Autopia";
+	font-size: 2rem;
+	line-height: 1.35em;
+	color: #F00;
+
 }
 
 /* Home
@@ -192,6 +242,7 @@ hr {
 	right: 0;
 	bottom: 0;
 	position: absolute;
+	background: rgb(234, 231, 222);
 }
 #megabloc.right-view {
 	left: -50%;
@@ -226,18 +277,15 @@ hr {
 #column-annonces{
 	width: 100%;
 	max-width: 500px;
-	border-right: 1px solid;
-	color: #F00;
-	background: #FbFbFb;
 }
 .elem{
-	padding: 0;
-	border-bottom: 1px solid;
+    background-color: #F5F3EF;
+	border-bottom: 1px solid #CAC7BF;
+	color: #7A7874;
+	position: relative;
 }
 #column-content{
-	width: calc(100% - 485px);
-	padding: 15px;
-	margin-left: -15px;
+	width: calc(100% - 500px);
 }
 #column-annonces.fullWidth{
 	margin-left: -500px;
@@ -282,8 +330,6 @@ header {
 	float: left;
 	position: relative;
 	margin-bottom: 0;
-	background: rgb(253, 253, 221);
-	border-bottom: 1px solid;
 }
 header h4{
 	font-size: 1.5rem;
@@ -345,10 +391,49 @@ header h4{
 	right: 0;
 }
 
+/* Article Top Bar
+-------------------------------------------------- */
+#top-bar{
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: -34px;
+}
+#buttons-left{
+	float: left;
+	position: absolute;
+}
+#buttons-right{
+}
+#buttons-right button{
+	margin-top: -1px;
+	display: block;
+	float: left;
+}
+#category-label{
+    float: left;
+    height: 34px;
+}
+#category-label h3{
+	font-size: 1rem;
+	margin:0 10px;
+	line-height: 33px;
+}
+#public-private{
+	display: block;
+    float: left;
+}
+button.btn.glyphicon{
+	padding:0;
+	border: none;
+	height: 34px;
+	width: 34px;
+}
 /* Forms
 -------------------------------------------------- */
 .form-control {
-	font-size: inherit;
+	font-size: 1rem;
+	line-height: 1.25em;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
@@ -367,16 +452,6 @@ header h4{
 	box-shadow: none !important;
 }
 .pac-container{z-index:2000 !important;}
-
-#controlButtons{
-	padding-right: 3rem;
-	padding-left: 3rem;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	transform: translateY(-50%);
-}
 .btn {
 	border-radius: 0;
 }
@@ -395,7 +470,7 @@ header h4{
 .btn-default {
 	color: #000;
 	background-color: #FFF;
-	border-color: #000;
+	border-color: #666;
 	border-radius: 0;
 }
 .btn-default.active, .btn-default.focus, .btn-default:active, .btn-default:focus, .btn-default:hover, .open > .dropdown-toggle.btn-default {
@@ -444,36 +519,31 @@ header h4{
 	border-top: 1px dashed #f00;
 }
 .form-control {
-	color: #000;
+	color: #444;
 	background-color: transparent;
 	background-image: none;
-	border: 1px solid #000;
+	border: 1px solid #666;
 	border-radius: 0;
 }
 .btn-info, .btn-info:hover, .btn-info:active, .btn-info:focus {
 	background-color: #D4D4D4;
-	color: rgba(0,0,0,.8);
-	border: 1px solid transparent;
+	color: #444;
 }
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:focus {
 	background-color: rgb(123, 185, 255);
-	border: 1px solid transparent;
-	color: rgb(0,0,0, .8);
+	color: #444;
 }
 .btn-danger, .btn-danger:hover, .btn-danger:active, .btn-danger:focus {
 	background-color: rgb(255, 83, 83);
-	border: 1px solid rgb(255, 83, 83);
-	color: rgba(255, 255, 255, .8);
+	color: #FFF;
 }
 .btn-warning {
 	color: orange;
 	background-color: transparent;
-	border: 1px solid orange;
 }
 .btn-success, .btn-success:hover {
 	background-color: rgb(77,250,137);
-	border: 1px solid transparent;
-	color: rgba(0,0,0, .8);
+	color: #444;
 }
 .btn-group-xs > .btn, .btn-xs {
 	border-radius: 0;
@@ -482,7 +552,12 @@ header h4{
 a {
 	transition: none;
 }
-
+.btn.disabled, .btn[disabled], fieldset[disabled] .btn{
+	opacity: .35;
+}
+.btn[disabled] .btn{
+	cursor: default !important;	
+}
 /* Tables
 -------------------------------------------------- */
 
@@ -494,6 +569,7 @@ a {
 }
 .editMode .simpleEdit {
 	border-bottom: 1px dashed;
+	background: #D5FFD5;
 }
 .editMode .fullEdit {
 	background: none;
@@ -501,64 +577,12 @@ a {
 	padding: 0px 0.5rem;
 	min-height: 4rem;
 	padding: .5rem;
+	background: #F1FFF1;
 }
 .editMode .fullEdit.medium-editor-placeholder::after {
 	padding: .5rem;
 }
 
-/* Headings
--------------------------------------------------- */
-h1 {
-	font-size: 5rem;
-	line-height: 1.25em;
-	font-weight: 300;
-	margin: .5em 0;
-	font-family: "Autopia";
-}
-h1.title{
-	text-transform: uppercase;
-	text-align: center;
-	color: #F00;
-}
-h2 {
-	font-family: "Autopia";
-	font-size: 3.5rem;
-	line-height: 1.25em;
-	font-weight: 300;
-	margin: 0;
-}
-h3 {
-	line-height: 1.5em;
-	font-weight: 300;
-	margin: .5em 0;
-}
-h4 {
-	font-weight: 300;
-	line-height: 1.5em;
-	margin: .5em 0;
-}
-h1 a, h2 a, h3 a, h4 a {
-	color: inherit;
-	border: 0 !important;
-}
-
-/* Texts */
-blockquote {
-	padding: 0;
-	margin: 20px 0px 20px 40px;
-	border-left: 1px solid;
-	border: 0;
-}
-.about{
-	padding: 0 100px;
-}
-.about p{
-	font-family: "Autopia";
-	font-size: 30px;
-	line-height: 1.35em;
-	color: #F00;
-
-}
 
 /* Forms
 -------------------------------------------------- */
@@ -574,7 +598,6 @@ blockquote {
 }
 #admin>span{
 	padding: 15px 17px;
-	font-size: 1rem;
 	color: rgba(0,0,0,.5);
 }
 #admin span a{
@@ -591,8 +614,7 @@ nav {
 }
 #menu{
 	max-width: 500px;
-	margin: 15px 0 70px;
-	color: #F00;
+	margin: 27px 0 70px;
 	float: left;
 	width: 100%;
 }
@@ -620,7 +642,7 @@ nav {
 	background-color: #F00;
 	position: absolute;
 	/* padding: 12px 10px; */
-	font-size: 28px;
+	font-size: 1.5rem;
 	margin: 0 auto;
 	width: 360px;
 	height: 40px;
@@ -637,9 +659,9 @@ nav {
 }
 .signin{
 	font-size: 1rem;
-    right: 15px;
-    top: 12px;
-    color: rgba(255,0,0,.6);
+	right: 15px;
+	top: 12px;
+	color: rgba(255,0,0,.6);
 }
 
 #admin .right ul.dropdown-menu{
@@ -696,15 +718,22 @@ nav {
 	background-color: transparent;
 	color: rgb(255,107,107);
 	overflow: hidden;
-    margin-top: -30px;
-    margin-bottom: -30px;}
-
+	margin-top: -30px;
+	margin-bottom: -30px;
+}
+.avatarImg{
+	float: left;
+    border-radius: 25px;
+    margin-right: 10px;
+}
+#post-author{
+	margin-top: 1rem;
+}
+.author-text{
+	line-height: 30px;
+}
 .avatar img{
-	-webkit-filter: url('#monochrome');
-	-moz-filter: url('#monochrome');
-	-ms-filter: url('#monochrome');
-	-o-filter: url('#monochrome');
-	filter: url('#monochrome');
+
 }
 .event-preview{
 	overflow: hidden;
@@ -799,17 +828,13 @@ nav {
 	background: #FBFBFB;
 }
 .annonce-mini .label-mini{
-	position: absolute;
-	top: -1px;
-	left: 15px;
+	float: left;
 	background-color: rgba(255,240,240,1);
-	border: 1px solid;
 	height: 25px;
-	line-height: 22px;
+	line-height: 25px;
 	padding: 0 5px;
-	color: #F00;
-	font-size: 1rem;
 	z-index: 9;
+	top: 0;
 }
 #btn-new {
 	width: 100%;
@@ -837,16 +862,14 @@ nav {
 #categories{
 	width: calc(100% - 49px);
 	float: left;
-	border: 1px solid;
 }
 #categories button{
 	height: 46px;
 }
 #searchbar{
 	position: absolute;
-	border: 1px solid;
-	height: 48px;
-	width: 50px;
+	height: 46px;
+	width: 56px;
 	background: white;
 	overflow: hidden;
 	right: 0;
@@ -880,7 +903,7 @@ nav {
 	height: 46px;
 	text-align: center;
 	line-height: 36px;
-	background: white;
+	background: #50C2FF;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -905,32 +928,39 @@ nav {
 .editMode .viewOnly {
 	display: none;
 }
-
+.viewOnly button{   
+	display: block;
+}
 /* Titraille */
 #content-titraille {
-	margin-bottom: 2.3rem;
+	margin: 2.3rem 0;
 }
 
 /* Viewer */
 #viewer {
 	position: relative;
 	border-radius: 0;
-	background-color: #fff;
+}
+#slider, #image-alone{
+    margin-bottom: 2.5rem;
 }
 .swiper-container-horizontal > .swiper-pagination {
 	text-align: left;
 	line-height: 10px;
 	bottom: 0rem;
 	top: auto;
+    padding-top: 10px;
+    background: #fff;
 }
 .swiper-pagination-bullet {
-	background: #FFF none repeat scroll 0% 0%;
+	background: #D8D8D8 none repeat scroll 0% 0%;
 	opacity: 1;
-	border: 1px solid #F00;
+    width: 10px;
+    height: 10px;
 }
 .swiper-pagination-bullet-active {
 	opacity: 1;
-	background: #F00 none repeat scroll 0% 0%;
+	background: #777 none repeat scroll 0% 0%;
 }
 .swiper-container {
 	width: 100%;
@@ -944,8 +974,34 @@ nav {
 	background-repeat: no-repeat;
 	height: 500px;
 }
-.swiper-button-next, .swiper-button-prev {
-	background-size: 20px 30px;
+figure.swiper-slide{
+	background-color: #FFF7D0;
+	margin-bottom: 20px;
+}
+.swiper-slide figcaption{
+	position: absolute;
+	margin: 0 auto;
+    position: absolute;
+    margin: 0 auto;
+    width: auto;
+    bottom: 15px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, 0%);
+    background: #fff;
+    padding: 0px 6px;
+}
+#viewer .swiper-button-next, #viewer .swiper-button-prev {
+	background-size: 20px 25px;
+	background-color: rgba(255,255,255,.5);;
+    border-radius: 22px;
+    width: 44px;
+}
+#viewer .swiper-button-prev{
+    background-position: 40%;
+}
+#viewer .swiper-button-next{
+    background-position: 60%;
 }
 .gallery-top {
 	height: 400px;
@@ -1013,7 +1069,7 @@ nav {
 
 /* Description */
 #field-description {
-	margin-top: 2rem;
+	margin-bottom: 2.3rem;
 }
 #field-description a {
 	text-decoration: underline;
@@ -1048,39 +1104,58 @@ nav {
 }
 
 /* meta */
-#informations .table-bordered {
+#informations {
 	border: none;
+	margin-bottom: 2.3rem;
 }
-#informations .table-bordered > tbody > tr > td > input {
+#informations .meta-elem{
+	min-height: 0;
+    margin-bottom: 15px;
+}
+#informations button{
+	background: none;
+}
+#informations input {
 	padding: 0px;
 	margin: 0px;
 	line-height: 1rem;
-	height: 1.5rem;
 }
-#informations .table-bordered > tbody > tr > td {
-	border-bottom: 0px none;
-	font-size: .9rem;
-	padding: 0;
-	float: left;
-	width: 100%;
+#informations div.infoTitle{
+	padding: 7px 10px 7px 10px;
+    background: #eee;
+    color: #666;
+    float: left;
+    /*margin-right: 7px;*/
 }
-#informations .table-bordered > tbody > tr > td:nth-child(even) {
-	border-top: 0;
-	padding-top: 0;
-	padding-bottom: .4rem;
+#informations .meta-bloc .infoContent{
+    padding: 7px 10px 7px 10px;
+    background: #F7F7F7;
+    float: left;
 }
-#informations .table-bordered > tbody > tr > td:nth-child(odd) {
-	text-decoration: underline;
-	padding-bottom: 0;
+#informations .meta-bloc .form-control{
+    padding: 7px 10px 7px 10px;
+    float: left;
 }
-.table-bordered > tbody > tr > td, .table-bordered > tbody > tr > th, .table-bordered > tfoot > tr > td, .table-bordered > tfoot > tr > th, .table-bordered > thead > tr > td, .table-bordered > thead > tr > th {
+#informations div {
 	border: none;
+}
+#informations div.display-map{
+	height: 32px;
+    width: 32px;
+    font-size: 1.25rem;
+    padding: 5px 7px;
+}
+#informations div.display-map{
+	padding: 0 !important;
+}
+#informations div.display-map>button{
+	text-align: center !important;
+	color: #349EE4;
 }
 #informations .btn.btn-default {
 	border: 0;
 	padding: 0;
 	margin: 0;
-	width: 100%;
 	white-space: normal;
 	text-align: left;
 	font-size: inherit;
@@ -1092,6 +1167,7 @@ nav {
 #informations .form-control {
 	border: 0;
 	border-bottom: 1px dashed;
+	background: #D5FFD5;
 }
 #informations .form-control:focus {
 	-webkit-box-shadow: none;
@@ -1177,38 +1253,123 @@ nav {
 /* post meta
 -------------------------------------------------- */
 #post-meta {
-	font-size: 0.8rem;
 	border-top: 1px solid;
 	color: #800;
 }
 
 /* COMMENTS
 -------------------------------------------------- */
+#comments-container{
+	padding: 3rem 2rem;
+	margin: -5rem auto 5rem auto;
+	position: relative;
+	min-width: 300px;
+	max-width: 900px;
+}
 .add-comment-form textarea {
 	width: 100%;
-	border: 1px solid;
-	height: 5rem;
-	margin: 1rem 0;
-	padding: .1rem .5rem;
+	max-width: 450px !important;
+	border: 1px solid #666;
+	height: 10rem;
+	margin: 0 0 1rem 0;
+	padding: .3rem .5rem;
+}
+.add-comment-form input.submit.btn.btn-success{
+	margin-top: -7px;
 }
 .add-comment-form .comment-field-name, .add-comment-form .comment-field-mail {
-	width: 50%;
+	margin-bottom: -1px;
+}
+.add-comment-form .comment-field-name>span, .add-comment-form .comment-field-mail>span {
+	min-width: 55px;
+	border-radius: 0px;
 }
 .add-comment-form .comment-field-name {
-	padding-right: .5rem;
 	float: left;
 }
 .add-comment-form .comment-field-mail {
-	padding-left: .5rem;
 }
-
-
-
+.comment-text{
+	display: table;
+	background: #fff;
+	padding: 11px 15px 2px 15px;
+	margin: 0 0 1rem 0;
+	border-radius: 10px;
+	min-width: 350px;
+	max-width: 450px;
+}
+.comment-meta{
+	font-size: 1rem;
+	margin-left: 15px;
+}
+#addComment{
+	max-width: 450px;
+}
+.input-group-addon{
+	border-color: #666;
+}
 /* Buttons
 -------------------------------------------------- */
 .toolbox {
 }
-
+.toggle.btn{
+	min-width: 72px;
+}
+.toggle.btn.rounded-button{
+	min-width: auto;
+	min-height: auto;
+	width: 40px !important;
+	height: 22px !important;
+	border-radius: 11px;
+    border-color: rgba(0,0,0,.65);
+}
+.toggle.btn.rounded-button .toggle-group{
+	width: 150%;
+}
+.toggle.btn.off.rounded-button .toggle-group{
+	left: -50%;
+}
+.toggle.btn.rounded-button .toggle-on{
+	background: #fff; /*B5EFB5*/
+}
+.toggle.btn.rounded-button .toggle-off{
+	background: #FFCECE;
+}
+.toggle.btn.rounded-button .toggle-handle{
+    border-radius: 11px;
+    width: 24px;
+    height: 20px;
+    margin-top: -2px;
+    padding: 0;
+    border-color: #444;
+    box-shadow: 0 0 3px rgba(0,0,0,.5);
+}
+.toggle-handle{
+	background: #efefef !important;
+}
+#public-private .toggle-handle{
+	background: none;
+	border: none;
+	height: auto;
+}
+#public-private .toggle-on.btn, #public-private .toggle-off.btn{
+	padding: 6px 12px !important;
+}
+#public-private .toggle-on.btn:before, #public-private .toggle-off.btn:before{
+	font-family: 'Glyphicons Halflings';
+    margin-right: 10px;
+    vertical-align: bottom;
+}
+#public-private .toggle-off.btn::before{
+    content: "\e105";
+}
+#public-private .toggle-on.btn::before{
+    content: "\e106";
+}
+#public-private .btn{
+	background: none;
+	border: none;
+}
 /* Next/Prev nav
 -------------------------------------------------- */
 .nextprev {
@@ -1245,7 +1406,7 @@ nav {
 -------------------------------------------------- */
 .footer {
 	padding: 1em 0 6em;
-	font-size: .8em;
+	font-size: 1rem;
 }
 .copyright {
 	float: left;
